<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">即投商会</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="commerce">即投云媒</string>
    <string name="password_login">密码登录</string>
    <string name="code">验证码登录</string>
    <string name="phone">请输入手机号码</string>
    <string name="password">请输入密码</string>
    <string name="register_password" tools:ignore="TypographyDashes">请设置6-18位的字母与数字作为登录密码</string>
    <string name="register_password_chech">再次输入登录密码</string>
    <string name="imageCode">请输入图形验证码</string>
    <string name="verificationCode">请输入验证码</string>
    <string name="sendVerificationCode">发送验证码</string>
    <string name="textProtocol">注册即表示您已阅读，并同意《用户注册协议》</string>
    <string name="newUser">新用户注册</string>
    <string name="login">登录</string>
    <string name="or">or</string>
    <string name="weChat">微信登录</string>
    <string name="address">选择地址</string>
    <string name="xxx">xxx</string>
    <string name="address2">地址</string>
    <string name="sendCode">发送验证码</string>
    <string name="register">注册</string>
</resources>
