<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="30dp"
        android:text="@string/commerce"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/PassWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="onClickPassWord"
                    android:text="@string/password_login"
                    android:textColor="@color/passWotd"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/PassWordView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/passWotd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="onClickCode"
                    android:text="@string/code"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/CodeView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/passWotd"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@id/text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/Phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/login_shape"
        android:hint="@string/phone"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/PassWordEd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/login_shape"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="visible"
        tools:ignore="Autofill,TextFields" />

    <LinearLayout
        android:id="@+id/CodeLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/login_shape"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/ImageViewCode"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:hint="@string/imageCode"
            android:inputType="textPassword"
            tools:ignore="Autofill,TextFields" />

        <ImageView
            android:id="@+id/imageViewCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/CodeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/login_shape"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/验证码"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:hint="@string/verificationCode"
            android:inputType="textPassword"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/TextViewCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/sendVerificationCode"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:text="@string/newUser"
        android:onClick="newUser"
        android:textColor="#02A7F0"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/login_shape_button"
        android:text="@string/login"
        android:textSize="20sp" />

    <include
        layout="@layout/text_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_shape_wechat">

        <ImageView
            android:id="@+id/imageWechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:background="@drawable/wechat"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/WeChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="25dp"
            android:background="#00ff00ff"
            android:onClick="onClickWechat"
            android:text="@string/weChat"
            android:textColor="#ffffff"
            android:textSize="15sp" />

    </LinearLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/editText"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:ems="10"-->
    <!--        android:inputType="textPassword" />-->

    <Button
        android:onClick="onAddress"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/address2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
